--- a/requirements_no_bounds.txt
+++ b/requirements_no_bounds.txt
@@ -1,21 +1,6 @@
-wandb
-pandas
 pytorch-lightning
-polars
-diffusers
 datasets[audio]==3.6.0
 fsspec==2023.6.0
 librosa==0.11.0
 pysoundfile
-accelerate
-scipy
-torchaudio
-transformers
-peft
-rich
-ipython
-audiomentations
-torch-audiomentations
-prefigure
-torchtune
-torchao
+audiomentations==0.41.0
