--- a/requirements_no_bounds.txt
+++ b/requirements_no_bounds.txt
@@ -1,6 +1,6 @@
-pytorch-lightning
+pytorch-lightning==2.5.2
 datasets[audio]==3.6.0
 fsspec==2023.6.0
-librosa==0.11.0
+librosa==0.10.2.post1
 pysoundfile
 audiomentations==0.41.0
