--- a/requirements_no_bounds.txt
+++ b/requirements_no_bounds.txt
@@ -2,5 +2,5 @@ pytorch-lightning==2.5.2
 datasets[audio]==3.6.0
 fsspec==2023.6.0
 librosa==0.10.2.post1
-pysoundfile
+soundfile>=0.12.1
 audiomentations==0.41.0
